# QwenASRMiniTool

./: .agignore  .gitignore  README.md  agent-logs.md  app-gpu.py  app.py  asr_utils.py  batch_tab.py  build.bat  chatllm_engine.py  config.py  diarize.py  downloader.py  ffmpeg_utils.py  generate_prompt_template.py  main.py  onboarding.py  pyproject.toml  requirements-gpu.txt  requirements.txt  runtime_hook_utf8.py  start-gpu.bat  streamlit_app.py  streamlit_vulkan.py  subtitle_detail_editor.py  subtitle_editor.py  subtitle_editor_window.py  test_asr_utils.py  test_config.py  test_downloader.py  test_factory.py
engine/: __init__.py  base.py  cuda_backend.py  factory.py  openvino_backend.py  vulkan_backend.py
